Working on the first real post for the blog

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://gerardketuma.github.io
 title: Gerard Ketuma
-subtitle: developer/consultant in Southern Illinois
+subtitle: Thoughts on all things web
 author: Gerard Ketuma
 simple_search: https://www.google.com/search
 description: Gerard Ketuma's blog on recent and related articles in web development and independent consulting.
